# OQQWall_rust

./: .dockerignore  .gitignore  .gitmodules  .impeccable.md  AGENTS.md  Cargo.toml  Dockerfile.rust-glibc231-toolchain  Dockerfile.telemetry-collector  README.md  config.json  devconfig.json  docker-compose.telemetry.yml  renderTodo.md  target.md  todo.md
.cargo/: config.toml
.github/workflows/: build-release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: config.rs  connect.rs  engine.rs  main.rs  oobe.rs  status.rs  telemetry.rs  web_api.rs  webview.rs
crates/app/src/tui/: config_editor.rs  journal.rs  mod.rs  oqqwall_tui.rs
crates/app/webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/app/webview-ui/src/: App.vue
crates/app/webview-ui/src/api/: client.ts  types.ts
crates/app/webview-ui/src/components/business/: LoginForm.vue  ReviewDetailDrawer.vue  ReviewWorkspace.vue  StatsDashboard.vue
crates/app/webview-ui/src/components/layout/: MainLayout.vue
crates/app/webview-ui/src/composables/: useAuth.ts  useReview.ts
crates/core/: Cargo.toml
crates/core/src/: anonymous.rs  command.rs  config.rs  draft.rs  event.rs  ids.rs  lib.rs  safety.rs  state.rs
crates/core/src/decide/: builder.rs  driver.rs  flush.rs  global.rs  ingress.rs  mod.rs  review.rs  scheduler.rs  sender.rs  tick.rs
crates/core/src/reduce/: mod.rs
crates/core/tests/: anonymous_regex.rs  builder.rs  decide_driver_recall.rs  decide_driver_refresh.rs  decide_driver_send.rs  decide_ingress_blacklist.rs  decide_review_merge.rs  decide_review_stack.rs  decide_review_toggle_anonymous.rs  decide_tick.rs  decide_tick_input_status.rs  reduce_recall.rs  reduce_replay.rs  safety_regex.rs
crates/drivers/: Cargo.toml  build.rs
crates/drivers/src/: avatar_cache.rs  blob_cache.rs  lib.rs  media_fetcher.rs  napcat.rs  qzone.rs  renderer.rs
crates/infra/: Cargo.toml
crates/infra/src/: debug_log.rs  journal.rs  lib.rs  snapshot.rs
crates/telemetry-collector/: Cargo.toml
crates/telemetry-collector/src/: main.rs
docs/: api_v1.md  command.md  config.md  dev_guide.md  engineering.md  engineering.md  .md  jsonexample.json  napcat_onebot_doc.md  oobe.md  render_svg.md  runbook.md  telemetry.md  telemetry_collector.md  toward_skia.md  tui_features.md  typesetting&render.md  webview.md
docs/napcat_onebot_doc_links/: 127037768d0.md  127110874d0.md  127194249d0.md  127195745d0.md  127196018d0.md  127196326d0.md  127200472d0.md  149685658d0.md  163738644d0.md  163738698d0.md  163747336d0.md  163812891d0.md  226656553e0.md  226656598e0.md  226656652e0.md  226656707e0.md  226656712e0.md  226656717e0.md  226656748e0.md  226656791e0.md  226656802e0.md  226656815e0.md  226656913e0.md  226656919e0.md  226656926e0.md  226656931e0.md  226656932e0.md  226656947e0.md  226656952e0.md  226656970e0.md  226656976e0.md  226656979e0.md  226656992e0.md  226657019e0.md  226657034e0.md  226657036e0.md  226657041e0.md  226657044e0.md  226657054e0.md  226657058e0.md  (+172 more)
res/emoji_png/apple_color_emoji/: metadata.json
scripts/: extract_apple_emoji_pngs.py  package_split_release.sh  rustc_wrapper.sh  zip_texts.py
showcase/: oqqwallhtmlcache.html  orinpost.jsonl
src/: main.rs
