[package]
name = "OQQWall_RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.31"
oqqwall_rust_core = { path = "../core" }
oqqwall_rust_drivers = { path = "../drivers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.44"
