[package]
name = "OQQWall_RUST"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "oqqwall_rust"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
crossterm = "0.28.1"
futures-util = "0.3.31"
oqqwall_rust_core = { path = "../core" }
oqqwall_rust_drivers = { path = "../drivers" }
oqqwall_rust_infra = { path = "../infra" }
ratatui = "0.29.0"
unicode-width = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.44"
