[package]
name = "oqqwall_rust_drivers"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures-util = "0.3.31"
base64 = "0.22.1"
imagesize = "0.13.0"
sha2 = "0.10"
oqqwall_rust_core = { path = "../core" }
oqqwall_rust_infra = { path = "../infra" }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skia-safe = { version = "0.91", features = ["textlayout"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.23.0"

[build-dependencies]
sha2 = "0.10"
