[package]
name = "oqqwall_telemetry_collector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "telemetry-collector"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
parquet = { version = "56.2.0", features = ["arrow"] }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
